<resources>
    <string name="app_name">Township Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_resident_home_screen">ResidentHomeScreenActivity</string>
    <string name="title_activity_security_home_screen">SecurityHomeScreenActivity</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="Password">Password</string>
    <string name="register_your_society">Register Your Society</string>
    <string name="contact_us">Contact Us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="if_approved_continue_payment">If approved, continue payment</string>
    <string name="enter_details_new_application">Enter Details New Application</string>
    <string name="dialog">dialog</string>
    <string name="input_email">Input Email</string>
    <string name="email">Email</string>

    <string name="server_addr">https://township-manager.herokuapp.com</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps_step_one">Map</string>
    <string name="how_many_buildings">How many buildings?</string>
    <string name="number_of_admins">No. of Admins</string>
    <string name="no_of_security_desks">No. of Security Desks</string>
    <string name="other_details">Other Details </string>
    <string name="amenities_details">Amenity Details </string>
    <string name="wing_details">Wing Details</string>
    <string name="naming_convention">Naming Convention</string>
    <string name="no_of_floors">No. of floors</string>
    <string name="wing_name">Wing Name</string>
    <string name="no_of_flats_per_floor">No. of flats per floor</string>
    <string name="name_of_amenity">Amenity Name</string>
    <string name="billing_period">Billing period</string>
    <string name="is_it_free_for_members_who_have_paid_membership_fees">Free for members</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="rate_in_rupees">Rate</string>
    <string name="start_a_new_application">Start a new application</string>
    <string name="step_one">Step One</string>
    <string name="continue_your_application">Proceed with application</string>
    <string name="step_two">Step Two</string>
    <string name="proceed_to_pay">Proceed to Payment</string>
    <string name="fill_up_contact_details_of_your_society_nset_your_society_location_nupload_a_pdf_document_certifying_the_validity_of_your_housing_society_nthere_must_be_only_one_document_and_the_file_size_should_not_exceed_2_mb_nif_you_have_already_completed_step_one_do_not_re_fill_the_application_and_proceed_towards_step_two_nyou_will_receive_a_registration_number_with_which_you_can_proceed_with_step_two">Fill up contact details of your society.  Set your society location.  Upload a PDF document certifying the validity of your housing society.  There must be only one document and the file size should not exceed 2 MB.  If you have already completed step one do not re-fill the application and proceed towards step two.  You will receive a registration number with which you can proceed with step two.</string>
    <string name="proceed_with_your_application_if_you_have_completed_step_one_of_the_registration_process_with_your_registration_number_nenter_the_number_of_admins_and_security_desks_as_per_the_society_nenter_the_number_of_wings_floors_different_amenities_etc_in_your_society_nfill_up_banking_details_nproceed_towards_payment_of_the_product_nthe_registration_will_be_then_completed_and_you_will_be_contacted_shortly">Proceed with your application if you have completed step one of the registration process with your registration number.  Enter the number of admins and security desks as per the society.  Enter the number of wings, floors, different amenities, etc. in your society.  Fill up banking details.  Proceed towards payment of the product.  The registration will be then completed and you will be contacted shortly.</string>
    <string name="pending">Pending</string>
    <string name="resolved">Resolved</string>
    <string name="read_more"><u>Read more</u></string>
    <string name="read_less"><u> Read less</u></string>
    <string name="add_amenity">Add Amenity</string>
    <string name="filter">Filter</string>
    <string name="by_date">By Date</string>
    <string name="by_wing">By Wing</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="designation">Designation</string>
    <string name="phone_number">Phone Number</string>
    <string name="register_a_complaint">Register a complaint</string>
    <string name="description_in_150_words">Description(in 150 words)</string>
    <string name="upload_photo">Upload photo</string>
    <string name="register_complaint">register complaint</string>
    <string name="application_number">Application Number</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="check_status">Check Status</string>
    <string name="proceed_to_step_two">Proceed to Step Two</string>
    <string name="application_status">Application Status</string>
    <string name="name_status">Name:</string>
    <string name="phone_status">Phone:</string>
    <string name="address_status">Address:</string>
    <string name="status_status">Status:</string>
    <string name="pandurang_d_souza">Pandurang D\'Souza</string>
    <string name="gate">Gate No.</string>
    <string name="name">Name</string>
    <string name="desks">Desks</string>
    <string name="personnel">Personnel</string>

    <string name="title_activity_notice_board_admin_fragment">NoticeBoardAdminFragment</string>
    <string name="title_activity_notice_board_admin">NoticeBoardAdmin</string>
    <string name="title_activity_notice_board_fragment">NoticeBoardFragment</string>
    <string name="title_activity_notice_board">NoticeBoard</string>
    <string name="save">Save</string>
    <string-array name="naming_convention_array">
        <item>A-1 to A-36</item>
        <item>A-101 to A-904</item>
    </string-array>
    <string-array name="billing_period_array">
        <item>Per hour</item>
        <item>Per day</item>
    </string-array>

</resources>
